--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -1989,4 +1989,127 @@
   <data name="SaveSucess" xml:space="preserve">
     <value>Saved successfully</value>
   </data>
+  <data name="AutoExposureTemplateSettings" xml:space="preserve">
+    <value>Automatic exposure template settings</value>
+  </data>
+  <data name="AutoFocusTemplateSettings" xml:space="preserve">
+    <value>Autofocus template settings</value>
+  </data>
+  <data name="DistortionEvaluationTemplateManagement" xml:space="preserve">
+    <value>Distortion evaluation template management</value>
+  </data>
+  <data name="FOVTemplateManagement" xml:space="preserve">
+    <value>FOV Template Management</value>
+  </data>
+  <data name="GhostTemplateManagement" xml:space="preserve">
+    <value>Ghost Template Management</value>
+  </data>
+  <data name="MTFTemplateManagement" xml:space="preserve">
+    <value>MTF Template Management</value>
+  </data>
+  <data name="SFRTemplateManagement" xml:space="preserve">
+    <value>SFR Template Management</value>
+  </data>
+  <data name="BuzProcucTemplateManagement" xml:space="preserve">
+    <value>BuzProduc Template Management</value>
+  </data>
+  <data name="DataLoadTemplateManagement" xml:space="preserve">
+    <value>Data loading template management</value>
+  </data>
+  <data name="AADetectTemplateManagement" xml:space="preserve">
+    <value>Emitting Area Detection Template Management</value>
+  </data>
+  <data name="ImportFlow" xml:space="preserve">
+    <value>Import process</value>
+  </data>
+  <data name="FocusPointsTemplateSettings" xml:space="preserve">
+    <value>FocusPoints algorithm settings</value>
+  </data>
+  <data name="ImageCroppingTemplateSettings" xml:space="preserve">
+    <value>Illumination area cutting template</value>
+  </data>
+  <data name="JNDTemplateManagement" xml:space="preserve">
+    <value>JND Template Management</value>
+  </data>
+  <data name="ImageEdit" xml:space="preserve">
+    <value>Graphic editing</value>
+  </data>
+  <data name="VerifyJson" xml:space="preserve">
+    <value>Validate JSON</value>
+  </data>
+  <data name="DatabaseResetOptionNotConfigured" xml:space="preserve">
+    <value>No database reset option is configured.</value>
+  </data>
+  <data name="InputTemplateName" xml:space="preserve">
+    <value>Please enter the template name.</value>
+  </data>
+  <data name="AlreadyExists" xml:space="preserve">
+    <value>It already exists</value>
+  </data>
+  <data name="DefaultTemplate" xml:space="preserve">
+    <value>Default template</value>
+  </data>
+  <data name="UseSystemDefaultTemplate" xml:space="preserve">
+    <value>Use the system default template</value>
+  </data>
+  <data name="LoadingTempate" xml:space="preserve">
+    <value>Loading template</value>
+  </data>
+  <data name="EditDefaultComplianceTemplate" xml:space="preserve">
+    <value>Edit Default Compliance Template</value>
+  </data>
+  <data name="TemplateExists_PleaseRename" xml:space="preserve">
+    <value>This template already exists. Please change the template name.</value>
+  </data>
+  <data name="PoiFileOutputTemplateSetting" xml:space="preserve">
+    <value>POI file output template settings</value>
+  </data>
+  <data name="POIFilterTemplateSetting" xml:space="preserve">
+    <value>POI filter template settings</value>
+  </data>
+  <data name="LedBandDetectorManagement" xml:space="preserve">
+    <value>"Light Strip Testing Template Management"</value>
+  </data>
+  <data name="SfrEdgeDetectionTemplateManagement" xml:space="preserve">
+    <value>SFR Edge Finding Template Management</value>
+  </data>
+  <data name="SfrV2TemplateManagement" xml:space="preserve">
+    <value>SFRV2 Template Management</value>
+  </data>
+  <data name="PoiAnalysisTemplateManagement" xml:space="preserve">
+    <value>POI Analysis Template Management</value>
+  </data>
+  <data name="MtfV2TemplateManagement" xml:space="preserve">
+    <value>MTFV2 Template Management</value>
+  </data>
+  <data name="LedStripDetectionV2TemplateManagement" xml:space="preserve">
+    <value>LEDStripDetectionV2 Template Management</value>
+  </data>
+  <data name="SubPixelLedDetectionTemplateManagement" xml:space="preserve">
+    <value>Subpixel-level LED bead detection template management</value>
+  </data>
+  <data name="HdrTemplateManagement" xml:space="preserve">
+    <value>HDR Template Management</value>
+  </data>
+  <data name="Fov20TemplateManagement" xml:space="preserve">
+    <value>FOV2.0 Template Management</value>
+  </data>
+  <data name="CrossCalculationTemplateManagement" xml:space="preserve">
+    <value>Cross-shaped calculation template management</value>
+  </data>
+  <data name="Distortion20TemplateManagement" xml:space="preserve">
+    <value>Distortion 2.0 Template Management</value>
+  </data>
+  <data name="ImageStitchingTemplateManagement" xml:space="preserve">
+    <value>Image stitching template management</value>
+  </data>
+  <data name="FindAaRegionTemplateManagement" xml:space="preserve">
+    <value>Looking for AA area template management</value>
+  </data>
+  <data name="BlackMuraTemplateManagement" xml:space="preserve">
+    <value>BlackMura Template Management</value>
+  </data>
+  <data name="StereoFusionTemplateManagement" xml:space="preserve">
+    <value>Binocular Fusion Template Management</value>
+  </data>
 </root>
