--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -1989,4 +1989,127 @@
   <data name="SaveSucess" xml:space="preserve">
     <value>保存成功</value>
   </data>
+  <data name="AutoExposureTemplateSettings" xml:space="preserve">
+    <value>自動曝光模板設定</value>
+  </data>
+  <data name="AutoFocusTemplateSettings" xml:space="preserve">
+    <value>自動聚焦模板設定</value>
+  </data>
+  <data name="DistortionEvaluationTemplateManagement" xml:space="preserve">
+    <value>畸變評價模板管理</value>
+  </data>
+  <data name="FOVTemplateManagement" xml:space="preserve">
+    <value>FOV範本管理</value>
+  </data>
+  <data name="GhostTemplateManagement" xml:space="preserve">
+    <value>鬼影模板管理</value>
+  </data>
+  <data name="MTFTemplateManagement" xml:space="preserve">
+    <value>MTF範本管理</value>
+  </data>
+  <data name="SFRTemplateManagement" xml:space="preserve">
+    <value>SFR模板管理</value>
+  </data>
+  <data name="BuzProcucTemplateManagement" xml:space="preserve">
+    <value>BuzProduc範本管理</value>
+  </data>
+  <data name="DataLoadTemplateManagement" xml:space="preserve">
+    <value>資料載入範本管理</value>
+  </data>
+  <data name="AADetectTemplateManagement" xml:space="preserve">
+    <value>發光區檢測模板管理</value>
+  </data>
+  <data name="ImportFlow" xml:space="preserve">
+    <value>導入流程</value>
+  </data>
+  <data name="FocusPointsTemplateSettings" xml:space="preserve">
+    <value>FocusPoints演算法設定</value>
+  </data>
+  <data name="ImageCroppingTemplateSettings" xml:space="preserve">
+    <value>發光區裁切模板</value>
+  </data>
+  <data name="JNDTemplateManagement" xml:space="preserve">
+    <value>JND模板管理</value>
+  </data>
+  <data name="ImageEdit" xml:space="preserve">
+    <value>圖形編輯</value>
+  </data>
+  <data name="VerifyJson" xml:space="preserve">
+    <value>校驗Json</value>
+  </data>
+  <data name="DatabaseResetOptionNotConfigured" xml:space="preserve">
+    <value>沒有配置資料庫重置選項</value>
+  </data>
+  <data name="InputTemplateName" xml:space="preserve">
+    <value>請輸入範本名稱</value>
+  </data>
+  <data name="AlreadyExists" xml:space="preserve">
+    <value>已經存在</value>
+  </data>
+  <data name="DefaultTemplate" xml:space="preserve">
+    <value>預設模板</value>
+  </data>
+  <data name="UseSystemDefaultTemplate" xml:space="preserve">
+    <value>"使用系統預設模板</value>
+  </data>
+  <data name="LoadingTempate" xml:space="preserve">
+    <value>正在載入模板</value>
+  </data>
+  <data name="EditDefaultComplianceTemplate" xml:space="preserve">
+    <value>編輯預設合規模板</value>
+  </data>
+  <data name="TemplateExists_PleaseRename" xml:space="preserve">
+    <value>已經存在改模板，請修改模板名稱</value>
+  </data>
+  <data name="PoiFileOutputTemplateSetting" xml:space="preserve">
+    <value>"Poi檔案輸出範本設定</value>
+  </data>
+  <data name="POIFilterTemplateSetting" xml:space="preserve">
+    <value>"POI過濾模板設定</value>
+  </data>
+  <data name="LedBandDetectorManagement" xml:space="preserve">
+    <value>"燈條偵測範本管理"</value>
+  </data>
+  <data name="SfrEdgeDetectionTemplateManagement" xml:space="preserve">
+    <value>SFR尋邊範本管理</value>
+  </data>
+  <data name="SfrV2TemplateManagement" xml:space="preserve">
+    <value>SFRV2模板管理</value>
+  </data>
+  <data name="PoiAnalysisTemplateManagement" xml:space="preserve">
+    <value>POI分析範本管理</value>
+  </data>
+  <data name="MtfV2TemplateManagement" xml:space="preserve">
+    <value>MTFV2範本管理</value>
+  </data>
+  <data name="LedStripDetectionV2TemplateManagement" xml:space="preserve">
+    <value>LEDStripDetectionV2模板管理</value>
+  </data>
+  <data name="SubPixelLedDetectionTemplateManagement" xml:space="preserve">
+    <value>亞像素級燈珠檢測模板管理</value>
+  </data>
+  <data name="HdrTemplateManagement" xml:space="preserve">
+    <value>HDR範本管理</value>
+  </data>
+  <data name="Fov20TemplateManagement" xml:space="preserve">
+    <value>FOV2.0範本管理</value>
+  </data>
+  <data name="CrossCalculationTemplateManagement" xml:space="preserve">
+    <value>十字計算模板管理</value>
+  </data>
+  <data name="Distortion20TemplateManagement" xml:space="preserve">
+    <value>"畸變2.0模板管理</value>
+  </data>
+  <data name="ImageStitchingTemplateManagement" xml:space="preserve">
+    <value>影像拼接模板管理</value>
+  </data>
+  <data name="FindAaRegionTemplateManagement" xml:space="preserve">
+    <value>尋找AA區模板管理</value>
+  </data>
+  <data name="BlackMuraTemplateManagement" xml:space="preserve">
+    <value>BlackMura範本管理</value>
+  </data>
+  <data name="StereoFusionTemplateManagement" xml:space="preserve">
+    <value>雙眼融合範本管理</value>
+  </data>
 </root>
