--- a/ColorVision/Properties/Resources.ja.resx
+++ b/ColorVision/Properties/Resources.ja.resx
@@ -282,4 +282,46 @@
   <data name="OpenConfigFolder" xml:space="preserve">
     <value>設定フォルダを開く</value>
   </data>
+  <data name="singleChannel" xml:space="preserve">
+    <value>シングルチャンネル</value>
+  </data>
+  <data name="threeChannles" xml:space="preserve">
+    <value>3チャンネル</value>
+  </data>
+  <data name="Step11" xml:space="preserve">
+    <value>ステップ1/1</value>
+  </data>
+  <data name="Step" xml:space="preserve">
+    <value>ステップ</value>
+  </data>
+  <data name="SkipIncompleteConfigPrompt" xml:space="preserve">
+    <value>まだ未完了の設定がいくつかあります。スキップしますか?</value>
+  </data>
+  <data name="UpdateFailed" xml:space="preserve">
+    <value>更新に失敗しました</value>
+  </data>
+  <data name="CheckUpdateOld" xml:space="preserve">
+    <value>アップデート（古い）を確認します。</value>
+  </data>
+  <data name="DownloadLocal" xml:space="preserve">
+    <value>ローカルダウンロード</value>
+  </data>
+  <data name="UpdateBaidu" xml:space="preserve">
+    <value>Baidu Cloud ダウンロード</value>
+  </data>
+  <data name="MenuUpdateReInstall_重新安装当前版本" xml:space="preserve">
+    <value>現在のバージョンを再インストール</value>
+  </data>
+  <data name="ClearPackageCache" xml:space="preserve">
+    <value>インストールパッケージのキャッシュをクリアする</value>
+  </data>
+  <data name="OpenCacheFolder" xml:space="preserve">
+    <value>キャッシュフォルダを開く</value>
+  </data>
+  <data name="SoftwareVersionIdentical" xml:space="preserve">
+    <value>同じソフトウェアバージョン</value>
+  </data>
+  <data name="RollbackRequiresUninstallThenInstallOrRerunPackage" xml:space="preserve">
+    <value>ソフトウェアをロールバックするには、まずソフトウェアをアンインストールしてから再インストールするか、インストール後にパッケージを再インストールする必要があります。</value>
+  </data>
 </root>
