--- a/ColorVision/Properties/Resources.ko.resx
+++ b/ColorVision/Properties/Resources.ko.resx
@@ -282,4 +282,46 @@
   <data name="OpenConfigFolder" xml:space="preserve">
     <value>구성 폴더를 엽니다</value>
   </data>
+  <data name="singleChannel" xml:space="preserve">
+    <value>단일 채널</value>
+  </data>
+  <data name="threeChannles" xml:space="preserve">
+    <value>3채널</value>
+  </data>
+  <data name="Step11" xml:space="preserve">
+    <value>1단계 / 1</value>
+  </data>
+  <data name="Step" xml:space="preserve">
+    <value>단계</value>
+  </data>
+  <data name="SkipIncompleteConfigPrompt" xml:space="preserve">
+    <value>아직 완료되지 않은 구성이 몇 가지 있습니다. 건너뛰시겠습니까?</value>
+  </data>
+  <data name="UpdateFailed" xml:space="preserve">
+    <value>업데이트에 실패했습니다</value>
+  </data>
+  <data name="CheckUpdateOld" xml:space="preserve">
+    <value>업데이트(이전)를 확인하세요.</value>
+  </data>
+  <data name="DownloadLocal" xml:space="preserve">
+    <value>로컬 다운로드</value>
+  </data>
+  <data name="UpdateBaidu" xml:space="preserve">
+    <value>바이두 클라우드 다운로드</value>
+  </data>
+  <data name="MenuUpdateReInstall_重新安装当前版本" xml:space="preserve">
+    <value>현재 버전 재설치</value>
+  </data>
+  <data name="ClearPackageCache" xml:space="preserve">
+    <value>설치 패키지 캐시 지우기</value>
+  </data>
+  <data name="OpenCacheFolder" xml:space="preserve">
+    <value>캐시 폴더를 엽니다</value>
+  </data>
+  <data name="SoftwareVersionIdentical" xml:space="preserve">
+    <value>동일한 소프트웨어 버전</value>
+  </data>
+  <data name="RollbackRequiresUninstallThenInstallOrRerunPackage" xml:space="preserve">
+    <value>소프트웨어를 롤백하려면 먼저 소프트웨어를 제거한 다음 다시 설치하거나, 설치 후 패키지를 다시 설치해야 합니다.</value>
+  </data>
 </root>
