--- a/ColorVision/Properties/Resources.zh-hant.resx
+++ b/ColorVision/Properties/Resources.zh-hant.resx
@@ -282,4 +282,46 @@
   <data name="OpenConfigFolder" xml:space="preserve">
     <value>打開設定資料夾</value>
   </data>
+  <data name="singleChannel" xml:space="preserve">
+    <value>單通道</value>
+  </data>
+  <data name="threeChannles" xml:space="preserve">
+    <value>三通道</value>
+  </data>
+  <data name="Step11" xml:space="preserve">
+    <value>步驟 1 / 1</value>
+  </data>
+  <data name="Step" xml:space="preserve">
+    <value>步驟</value>
+  </data>
+  <data name="SkipIncompleteConfigPrompt" xml:space="preserve">
+    <value>還有未完成的配置，是否跳過</value>
+  </data>
+  <data name="UpdateFailed" xml:space="preserve">
+    <value>更新失敗</value>
+  </data>
+  <data name="CheckUpdateOld" xml:space="preserve">
+    <value>檢查更新(舊)</value>
+  </data>
+  <data name="DownloadLocal" xml:space="preserve">
+    <value>本地下載</value>
+  </data>
+  <data name="UpdateBaidu" xml:space="preserve">
+    <value>百度雲端硬碟下載</value>
+  </data>
+  <data name="MenuUpdateReInstall_重新安装当前版本" xml:space="preserve">
+    <value>ReinstallCurrentVersion</value>
+  </data>
+  <data name="ClearPackageCache" xml:space="preserve">
+    <value>"清除安裝包緩存</value>
+  </data>
+  <data name="OpenCacheFolder" xml:space="preserve">
+    <value>打開快取資料夾</value>
+  </data>
+  <data name="SoftwareVersionIdentical" xml:space="preserve">
+    <value>軟體版本相同</value>
+  </data>
+  <data name="RollbackRequiresUninstallThenInstallOrRerunPackage" xml:space="preserve">
+    <value>回退軟體需要先卸載在安裝，或是安裝後重新執行安裝包；</value>
+  </data>
 </root>
