--- a/UI/ColorVision.UI/Properties/Resources.ja.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ja.resx
@@ -469,4 +469,7 @@
   <data name="DumpFileSettings" xml:space="preserve">
     <value>アーカイブファイルの設定</value>
   </data>
+  <data name="ProjectSolution_P" xml:space="preserve">
+    <value>プロジェクト/ソリューション (P)...</value>
+  </data>
 </root>
