--- a/UI/ColorVision.UI/Properties/Resources.resx
+++ b/UI/ColorVision.UI/Properties/Resources.resx
@@ -508,4 +508,7 @@
   <data name="DumpFileSettings" xml:space="preserve">
     <value>归档文件设置</value>
   </data>
+  <data name="ProjectSolution_P" xml:space="preserve">
+    <value>项目/解决方案(_P)...</value>
+  </data>
 </root>
