--- a/UI/ColorVision.UI/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.UI/Properties/Resources.zh-Hant.resx
@@ -469,4 +469,7 @@
   <data name="DumpFileSettings" xml:space="preserve">
     <value>歸檔文件設定</value>
   </data>
+  <data name="ProjectSolution_P" xml:space="preserve">
+    <value>項目/解決方案(P)...</value>
+  </data>
 </root>
